--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <!-- Enable bootstrap 4 theme -->
+  <script>window.__theme = 'bs4';</script>
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    <span class="fa fa-refresh fa-refresh-animate"></span>
+  </app-root>
 </body>
 </html>
